# southwark

./: .bumpversion.cfg  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  MANIFEST.in  README.rst  __pkginfo__.py  formate.toml  lint_roller.sh  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: actions_deploy_conda.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: conda_ci.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
Southwark/: __init__.py
doc-source/: Source.rst  conf.py  contributing.rst  ignore_missing_xref.py  index.rst  license.rst  local_extension.py  requirements.txt
doc-source/api/: Southwark.rst  click.rst  config.rst  log.rst  repo.rst  southwark.rst  targit.rst
southwark/: __init__.py  click.py  config.py  log.py  repo.py  targit.py
tests/: conftest.py  requirements.txt  test_click.py  test_config.py  test_log.py  test_repo.py  test_southwark.py  test_targit.py
tests/test_click_/: test_commit_option_False_.txt  test_commit_option_None_.txt  test_commit_option_True_.txt  test_defaults.txt  test_help.txt
tests/test_config_/: test_set_remote_http.yml  test_set_remote_ssh.yml
tests/test_repo_/: test_list_remotes.yml
tests/test_targit_/: test_targit.yml
