[build-system]
requires = [ "setuptools>=40.6.0", "wheel>=0.34.2",]
build-backend = "setuptools.build_meta"

[project]
name = "Southwark"
version = "0.8.0"
description = "Extensions to the Dulwich Git library."
readme = "README.rst"
keywords = [ "git", "dulwich", "vcs",]
dynamic = [ "requires-python", "classifiers", "dependencies",]
[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/southwark"
"Issue Tracker" = "https://github.com/domdfcoding/southwark/issues"
"Source Code" = "https://github.com/domdfcoding/southwark"
Documentation = "https://southwark.readthedocs.io/en/latest"
